fix (final card now overlaps border on smaller screen sizes)

--- a/client/src/features/projects/ProjectsStylesheet.scss
+++ b/client/src/features/projects/ProjectsStylesheet.scss
@@ -48,13 +48,19 @@
 
 .projectsHeader {
   width: 100%;
-  margin-right: 20%;
+  margin-right: 5%;
   margin-bottom: 10px;
 }
 
 .contentRow {
   min-height: 400px;
-  margin: 0px 10% !important;
+  margin-top: .66vh;
+}
+
+@media (min-width: 1310px) {
+  .contentRow {
+    padding: 0 2.5%;
+  }
 }
 
 .card {
